design: fixed more options menu vertical alignment, resized the more options menus in folder and file to the same size

--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -555,17 +555,14 @@
 
 .more-options {
   position: absolute;
-  top: 8px;
+  top: 11.5px;
   right: 8px;
   background: none;
   border: none;
   cursor: pointer;
 }
 
-.more-options i {
-  font-size: 16px;
-  color: #5f6368;
-}
+
 
 .folder-item:hover .more-options {
   opacity: 1;
@@ -647,13 +644,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            opacity: 1;
+            opacity: 0.7;
         }
 
-        .more-options i {
-            font-size: 16px;
-            color: #5f6368;
-        }
+        
 
         .more-options:hover {
             
@@ -953,13 +947,7 @@
 
 .files-section.list-view .file-preview {
     display: none !important;
-    /*
-    width: 50px;
-    height: 50px;
-    flex-shrink: 0;
-    margin-right: 16px;
-    align-items: center;
-    */
+
 }
 
 .btn-selected{
